infrastructure/opensearch/templates/networking.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  annotations:
    cert-manager.io/cluster-issuer: local-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    hostname: opensearch.apicius.local
    port: 80
    name: http
  - protocol: HTTPS
    hostname: opensearch-master.apicius.local
    port: 443
    name: https-master
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls-opensearch-local
  - protocol: HTTPS
    hostname: opensearch.apicius.local
    port: 443
    name: https-dashboard
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls-opensearch-local
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route-dashboard
spec:
  parentRefs:
  - name: gateway
  hostnames:
    - opensearch.apicius.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: opensearch-opensearch-dashboards
      port: 5601
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route-master
spec:
  parentRefs:
  - name: gateway
  hostnames:
    - opensearch-master.apicius.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: opensearch-cluster-master
      port: 9200
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-dashboard-redirect
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - opensearch.apicius.local
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
